[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Editor/TriggerController.gd" type="Script" id=1]

[node name="TriggerController" type="MarginContainer"]
margin_right = 256.0
margin_bottom = 128.0
script = ExtResource( 1 )

[node name="Handles" type="VBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Top" type="HBoxContainer" parent="Handles"]
margin_right = 256.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 0
custom_constants/separation = 0

[node name="TopLeft" type="TextureButton" parent="Handles/Top"]
margin_right = 4.0
margin_bottom = 4.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 12
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Top" type="TextureButton" parent="Handles/Top"]
margin_left = 4.0
margin_right = 252.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 9
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="TextureButton" parent="Handles/Top"]
margin_left = 252.0
margin_right = 256.0
margin_bottom = 4.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 11
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="HBoxContainer" parent="Handles"]
margin_top = 4.0
margin_right = 256.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Left" type="TextureButton" parent="Handles/Mid"]
margin_right = 4.0
margin_bottom = 120.0
rect_min_size = Vector2( 4, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 10
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="TextureButton" parent="Handles/Mid"]
margin_left = 4.0
margin_right = 252.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="Right" type="TextureButton" parent="Handles/Mid"]
margin_left = 252.0
margin_right = 256.0
margin_bottom = 120.0
rect_min_size = Vector2( 4, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 10
size_flags_horizontal = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="Handles"]
margin_top = 124.0
margin_right = 256.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 2
custom_constants/separation = 0

[node name="BottomLeft" type="TextureButton" parent="Handles/Bottom"]
margin_right = 4.0
margin_bottom = 4.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 11
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Bottom" type="TextureButton" parent="Handles/Bottom"]
margin_left = 4.0
margin_right = 252.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 9
size_flags_horizontal = 3
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="TextureButton" parent="Handles/Bottom"]
margin_left = 252.0
margin_right = 256.0
margin_bottom = 4.0
rect_min_size = Vector2( 4, 4 )
mouse_filter = 1
mouse_default_cursor_shape = 12
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
margin_right = 256.0
margin_bottom = 128.0
